fix(replies): font size was too large

--- a/src/views/post-page/post-page.module.css
+++ b/src/views/post-page/post-page.module.css
@@ -224,6 +224,7 @@
   font-family: var(--font-family);
   line-height: 1.5;
   unicode-bidi: isolate;
+  font-size: 14px;
 }
 
 .reply .author {
